--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,31 @@
+alembic==1.8.1
+antiorm==1.2.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.5
+db==0.1.1
+dnspython==2.2.1
+email-validator==1.3.0
+Flask==2.2.2
+Flask-Cors==3.0.10
+Flask-Login==0.6.2
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==3.0.0
+greenlet==1.1.3.post0
 idna==3.4
+init==0.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.3
+MarkupSafe==2.1.1
+psycopg2==2.9.4
+python-dotenv==0.21.0
+PyYAML==6.0
 requests==2.28.1
+six==1.16.0
+SQLAlchemy==1.4.41
+terminal==0.4.0
 tk==0.1.0
 urllib3==1.26.12
+Werkzeug==2.2.2
